--- a/hariborings/dna_only_analysis.ipynb
+++ b/hariborings/dna_only_analysis.ipynb
@@ -53,8 +53,12 @@
     "DATA_LOADED_DAY = \"2024-05-21\"\n",
     "TODAY = datetime.now().strftime(\"%Y-%m-%d\")\n",
     "print(f\"Today: {TODAY}\")\n",
-    "DATA_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/extracted_grains/unbound_{SAMPLE_TYPE}/date_{DATA_LOADED_DAY}/\")\n",
-    "SAVE_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/processed_grains/unbound_{SAMPLE_TYPE}/date_{TODAY}/\")\n",
+    "DATA_DIR = Path(\n",
+    "    f\"/Users/sylvi/topo_data/hariborings/extracted-grains-new-names-20250814/unbound_{SAMPLE_TYPE}/date_{DATA_LOADED_DAY}/\"\n",
+    ")\n",
+    "SAVE_DIR = Path(\n",
+    "    f\"/Users/sylvi/topo_data/hariborings/extracted-grains-new-names-20250814/unbound_{SAMPLE_TYPE}/date_{TODAY}/\"\n",
+    ")\n",
     "SAVE_DIR.mkdir(exist_ok=True, parents=True)\n",
     "\n",
     "MAXIMUM_GRAIN_NUMBER = 10000\n",
@@ -1824,7 +1828,9 @@
     "        curvatures,\n",
     "        radians_per_nm_threshld,\n",
     "    ) in enumerate(\n",
-    "        zip(images, tags, grain_indexes, defect_stats, nm_sampled_traces, curvatures_list, radians_per_nm_threshld_list)\n",
+    "        zip(\n",
+    "            images, tags, grain_indexes, defect_stats, nm_sampled_traces, curvatures_list, radians_per_nm_threshld_list\n",
+    "        )\n",
     "    ):\n",
     "        ax[i // width, i % width * 2].imshow(image, cmap=cmap, vmin=vmin, vmax=vmax)\n",
     "        # Plot the trace\n",
@@ -2251,7 +2257,9 @@
     "                else:\n",
     "                    defect_indexes = np.append(\n",
     "                        defect_indexes,\n",
-    "                        np.append(np.arange(window_start_index, len(pooled_trace)), np.arange(0, window_end_index + 1)),\n",
+    "                        np.append(\n",
+    "                            np.arange(window_start_index, len(pooled_trace)), np.arange(0, window_end_index + 1)\n",
+    "                        ),\n",
     "                    )\n",
     "                # Ensure each index is unique\n",
     "                defect_indexes = np.unique(defect_indexes)\n",
@@ -2516,7 +2524,14 @@
     "        area_perimeter_ratio,\n",
     "    ) in enumerate(\n",
     "        zip(\n",
-    "            images, tags, grain_indexes, traces, defects, distances_between_defects, feret_ratios, area_perimeter_ratios\n",
+    "            images,\n",
+    "            tags,\n",
+    "            grain_indexes,\n",
+    "            traces,\n",
+    "            defects,\n",
+    "            distances_between_defects,\n",
+    "            feret_ratios,\n",
+    "            area_perimeter_ratios,\n",
     "        )\n",
     "    ):\n",
     "        if rows == 1:\n",
@@ -2757,7 +2772,9 @@
     "plt.plot(trace_nm[:, 1], trace_nm[:, 0], \"r\")\n",
     "grain_defect_positions_nm_xy = grain_data[\"grain_defect_coordinates_nm\"]\n",
     "plt.scatter(\n",
-    "    [point[1] for point in grain_defect_positions_nm_xy], [point[0] for point in grain_defect_positions_nm_xy], c=\"cyan\"\n",
+    "    [point[1] for point in grain_defect_positions_nm_xy],\n",
+    "    [point[0] for point in grain_defect_positions_nm_xy],\n",
+    "    c=\"cyan\",\n",
     ")\n",
     "plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
     "plt.gca().invert_yaxis()\n",
@@ -3513,7 +3530,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dl-metal",
+   "display_name": "topostats",
    "language": "python",
    "name": "python3"
   },
@@ -3527,7 +3544,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
