--- a/hariborings/dna_only_extract_molecules_from_flattened_images.ipynb
+++ b/hariborings/dna_only_extract_molecules_from_flattened_images.ipynb
@@ -78,9 +78,30 @@
     "\n",
     "today = datetime.now().strftime(\"%Y-%m-%d\")\n",
     "\n",
-    "SAMPLE_TYPE = \"ON_REL\"\n",
-    "DATA_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/testing_all_unbound_data/output_{SAMPLE_TYPE}/processed/\")\n",
-    "SAVE_DIR = Path(f\"/Users/sylvi/topo_data/hariborings/extracted_grains/unbound_{SAMPLE_TYPE}/date_{today}/\")\n",
+    "NEW_NAME_SAMPLE_TYPE = \"ON_REL\"\n",
+    "# Get the new nomenclature where OT1 = OT2 and OT2 = OT1\n",
+    "if NEW_NAME_SAMPLE_TYPE == \"OT1_REL\":\n",
+    "    OLD_NAME_SAMPLE_TYPE = \"OT2_REL\"\n",
+    "elif NEW_NAME_SAMPLE_TYPE == \"OT2_REL\":\n",
+    "    OLD_NAME_SAMPLE_TYPE = \"OT1_REL\"\n",
+    "elif NEW_NAME_SAMPLE_TYPE == \"OT1_SC\":\n",
+    "    OLD_NAME_SAMPLE_TYPE = \"OT2_SC\"\n",
+    "elif NEW_NAME_SAMPLE_TYPE == \"OT2_SC\":\n",
+    "    OLD_NAME_SAMPLE_TYPE = \"OT1_SC\"\n",
+    "# Keep the ON type the same\n",
+    "elif NEW_NAME_SAMPLE_TYPE == \"ON_REL\":\n",
+    "    OLD_NAME_SAMPLE_TYPE = \"ON_REL\"\n",
+    "elif NEW_NAME_SAMPLE_TYPE == \"ON_SC\":\n",
+    "    OLD_NAME_SAMPLE_TYPE = \"ON_SC\"\n",
+    "else:\n",
+    "    raise ValueError(f\"Unknown NEW_NAME_SAMPLE_TYPE: {NEW_NAME_SAMPLE_TYPE}\")\n",
+    "\n",
+    "DATA_DIR = Path(\n",
+    "    f\"/Users/sylvi/topo_data/hariborings/testing_all_unbound_data/output_{OLD_NAME_SAMPLE_TYPE}/processed/\"\n",
+    ")\n",
+    "SAVE_DIR = Path(\n",
+    "    f\"/Users/sylvi/topo_data/hariborings/extracted-grains-new-names-20250814/unbound_{NEW_NAME_SAMPLE_TYPE}/date_{today}/\"\n",
+    ")\n",
     "SAVE_DIR.mkdir(exist_ok=True, parents=True)\n",
     "assert SAVE_DIR.exists()\n",
     "assert DATA_DIR.exists()\n",
